--- a/app/css/globals.scss
+++ b/app/css/globals.scss
@@ -38,6 +38,63 @@ body {
   top: calc(var(--index) * 4rem);
 }
 
-.Typewriter{
+.Typewriter {
   display: contents;
+}
+
+@keyframes move-wrapper {
+  0% {
+    transform: translate(-50%, 50%) rotate(0) scale(0.8);
+  }
+
+  33.33% {
+    transform: translate(70vw, -60vh) rotate(200deg) scale(1);
+  }
+  40% {
+    transform: translate(30vw, -30vh) rotate(210deg) scale(1.2);
+  }
+  65% {
+    transform: translateY(-45vh) rotate(260deg) scale(1.4);
+  }
+  80% {
+    transform: translate(70vw, -25vh) rotate(150deg) scale(1.1);
+  }
+  100% {
+    transform: translate(-50%, 50%) rotate(0) scale(0.8);
+  }
+}
+.animated-wrapper {
+  animation-name: move-wrapper;
+  animation-duration: 25s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: both;
+  position: absolute;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+}
+
+
+@keyframes glow {
+  0% {
+    opacity: 0.5;
+    box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #ff00de,
+      0 0 80px #ff00de, 0 0 90px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+  }
+  100% {
+    opacity: 1;
+    box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff,
+      0 0 40px rgba(255, 255, 0, 0.5), 0 0 80px rgba(255, 255, 0, 0.5),
+      0 0 90px rgba(255, 255, 0, 0.5), 0 0 100px rgba(255, 255, 0, 0.5),
+      0 0 150px rgba(255, 255, 0, 0.5);
+  }
+}
+
+.glow {
+  animation-name: glow;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #ff00de,
+    0 0 80px #ff00de, 0 0 90px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
 }
